--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -10,7 +10,6 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
           integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <!--    <link href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet" crossorigin="anonymous"/>-->
     <title>Login</title>
 </head>
 <body>
@@ -21,10 +20,10 @@
 <div class="container" style="width: 350px;">
     <form class="form-signin" method="post" th:action="@{/login}">
         <h2 class="h3 mb-3 font-weight-bold">Please sign in</h2>
-        <div th:if="${param.error}" class="alert alert-danger" role="alert">Wrong email or password...</div>
+        <div th:if="${param.error}" class="alert alert-danger" role="alert">Wrong login or password...</div>
         <p>
-            <label for="login" class="sr-only">Email address</label>
-            <input type="text" id="login" class="form-control" placeholder="Email address / User name" name="login"
+            <label for="name" class="sr-only">Email address</label>
+            <input type="text" id="name" class="form-control" placeholder="User name" name="name"
                    required autofocus>
         </p>
         <p>
