--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,7 +22,7 @@
         <h2 class="h3 mb-3 font-weight-bold">Please sign in</h2>
         <div th:if="${param.error}" class="alert alert-danger" role="alert">Wrong login or password...</div>
         <p>
-            <label for="name" class="sr-only">Email address</label>
+            <label for="name" class="sr-only">User name</label>
             <input type="text" id="name" class="form-control" placeholder="User name" name="name"
                    required autofocus>
         </p>
