--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,10 +20,10 @@
 <div class="container" style="width: 350px;">
     <form class="form-signin" method="post" th:action="@{/login}">
         <h2 class="h3 mb-3 font-weight-bold">Please sign in</h2>
-        <div th:if="${param.error}" class="alert alert-danger" role="alert">Wrong login or password...</div>
+        <div th:if="${param.error}" class="alert alert-danger" role="alert">Wrong email or password...</div>
         <p>
-            <label for="name" class="sr-only">User name</label>
-            <input type="text" id="name" class="form-control" placeholder="User name" name="name"
+            <label for="email" class="sr-only">Email</label>
+            <input type="email" id="email" class="form-control" placeholder="Email" name="email"
                    required autofocus>
         </p>
         <p>
